// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoItem Snapshots should match the large snapshot 1`] = `
<div
  className="flex items-center"
>
  <figure
    className="flex flex-no-shrink self-start bg-white shadow rounded-full mr-4 w-16 h-16"
  >
    <Image
      alt=""
      className="rounded-full"
      cloudName="dkrjpli3y"
      crop="scale"
      publicId="https://via.placeholder.com/150"
      secure="true"
      width="200"
    />
  </figure>
  <div
    className="flex-grow"
  >
    <div
      className="text-black font-bold text-xl"
    >
      I am a headline
    </div>
    <div
      className="text-grey-darker text-base"
    >
      I am a tagline
    </div>
  </div>
</div>
`;

exports[`InfoItem Snapshots should match the regular snapshot 1`] = `
<div
  className="flex items-center"
>
  <figure
    className="flex flex-no-shrink self-start bg-white shadow rounded-full mr-2 w-12 h-12"
  >
    <Image
      alt=""
      className="rounded-full"
      cloudName="dkrjpli3y"
      crop="scale"
      publicId="https://via.placeholder.com/150"
      secure="true"
      width="200"
    />
  </figure>
  <div
    className="flex-grow"
  >
    <div
      className="text-black font-bold text-base"
    >
      I am a headline
    </div>
    <div
      className="text-grey-darker text-sm"
    >
      I am a tagline
    </div>
  </div>
</div>
`;
